# flessd

./: .gitignore  AUTHORS  Makefile.am  NEWS  NOTES  README  bootstrap.sh  configure.ac
include/: Makefile.am  fmod.h  fmod_errors.h  fmoddyn.h
include/flessd/: music.h  sound.h  types.h
src/: Makefile.am  defs.h  fmod.pc.in  fmusic.c  fsound.c
